--- a/MMDVM_Bridge.ini
+++ b/MMDVM_Bridge.ini
@@ -5,15 +5,15 @@ Timeout=180
 Duplex=0
 
 [Info]
-RXFrequency=222340000
-TXFrequency=224940000
+RXFrequency=
+TXFrequency=
 Power=1
-Latitude=41.7333
-Longitude=-50.3999
+Latitude=
+Longitude=
 Height=0
-Location=Iceberg, North Atlantic
+Location=
 Description=MMDVM_Bridge
-URL=https://groups.io/g/DVSwitch
+URL=
 
 [Log]
 # Logging levels, 0=No logging, 1=Debug, 2=Message, 3=Info, 4=Warning, 5=Error, 6=Fatal
